--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
   font-family: "Roboto", sans-serif;
   height: 100%;
+  overflow-y: auto;
 }
 
 #root {
   height: 100%;
+  overflow-y: auto;
 }
