--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@ body {
   height: 100%;
   overflow-y: auto;
 }
+
+/* Hide the webpack-dev-server client error overlay */
+iframe#webpack-dev-server-client-overlay {
+  display: none;
+}
