--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,13 +3,15 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
 }
 
 #root {
   --translateX: 0px;
   --translateY: 0px;
-  height: 100%;
+  height: auto;
+  min-height: 100vh;
 }
 
 /* Hide the webpack-dev-server client error overlay */
